--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -36,9 +36,21 @@ body {
     margin-top: 10px;
 }
 
+
 #btnSubmit {
     margin: 30px 15px 10px 15px;
 }
+
+#btnSubmit i {
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
 
 #info {
     margin: 30px 0px 10px 0px;
